[package]
name = "mmo-tech"
version = "0.1.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { "git" = "https://github.com/bevyengine/bevy" }
log = "0.4"
simple_logger = "1.11"
clap = "3.0.0-beta.2"
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
